--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
      - "3000:3000"
     volumes:
       - "./frontend/:/app"
+      - "/app/app/node_modules"
     command: sh -c "cd app && yarn start"
     environment:
       - NODE_ENV=development
