--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       APP_DATABASE_NAME: travel-notes
       APP_DATABASE_USER: root
       APP_DATABASE_PASSWORD: root
+      FLASK_ENV: development
       TZ: Asia/Tokyo
     command: flask run --host 0.0.0.0 --port 4000
     depends_on:
