--- a/.github/workflows/backend_test.yml
+++ b/.github/workflows/backend_test.yml
@@ -22,22 +22,21 @@ jobs:
       APP_DATABASE_PASSWORD: root
       FLASK_ENV: development
       TZ: Asia/Tokyo
-    services:
-      db:
-        image: mysql:5.7.27
-        ports:
-          - 3306:3306
-        env:
-          MYSQL_USER: root
-          MYSQL_ROOT_PASSWORD: root
-          MYSQL_ALLOW_EMPTY_PASSWORD: yes
-          BIND-ADDRESS: 0.0.0.0
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
           python-version: '3.6' # Version range or exact version of a Python version to use, using SemVer's version range syntax
           architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
+      - uses: mirromutth/mysql-action@v1.1
+          with:
+            host port: 3306 # Optional, default value is 3306. The port of host
+            container port: 3306 # Optional, default value is 3306. The port of container
+            character set server: 'utf8' # Optional, default value is 'utf8mb4'. The '--character-set-server' option for mysqld
+            collation server: 'utf8_general_ci' # Optional, default value is 'utf8mb4_general_ci'. The '--collation-server' option for mysqld
+            mysql version: '5.7' # Optional, default value is "latest". The version of the MySQL
+            mysql database: 'travel-notes' # Optional, default value is "test". The specified database which will be create
+            mysql root password: 'root' # Required if "mysql user" is empty, default is empty. The root superuser password
       - name: pip install
         run: |
           mv backend app
@@ -50,7 +49,6 @@ jobs:
           cd backend/app
           flask db init
           flask db migrate
-          flask db upgrade
       - name: run test
         run: |
           cd backend/app
