--- a/.github/workflows/backend_test.yml
+++ b/.github/workflows/backend_test.yml
@@ -16,7 +16,7 @@ jobs:
       DB_HOST: 127.0.0.1
       DB_PORT: 3306
       APP_DATABASE_HOST: 127.0.0.1
-      TEST_DATABASE_HOST: test_db
+      TEST_DATABASE_HOST: 127.0.0.1
       APP_DATABASE_NAME: travel-notes
       APP_DATABASE_USER: root
       APP_DATABASE_PASSWORD: root
